--- a/DISM_b/MainWindow.xaml
+++ b/DISM_b/MainWindow.xaml
@@ -8,69 +8,70 @@
         mc:Ignorable="d"
         Title="DISM.b" Height="385" Width="430
         " WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" ResizeMode="NoResize">
-    <Grid Margin="0,0,0,0">
-        <TextBlock x:Name="CanvasLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Create Image" VerticalAlignment="Top" Canvas.Left="164" Canvas.Top="-19" Margin="10,39,0,0" Width="404" TextAlignment="Center" Visibility="Visible"/>
-        <Canvas Name="Create_Image_Canvas" HorizontalAlignment="Left" Height="290" Margin="10,55,0,0" VerticalAlignment="Top" Width="404" Visibility="Visible">
-            <Button Canvas.Top="10" Width="16" Canvas.Left="127" Height="16" Click="FindImageFrom">
-                <Button.Content>
-                    <Image Source="file-explorer-folder-libraries-icon-18298.png" IsEnabled="False"/>
-                </Button.Content>
-                <Button.Background>
-                    <ImageBrush ImageSource="file-explorer-folder-libraries-icon-18298.png"/>
-                </Button.Background>
-            </Button>
-            <TextBlock Canvas.Left="10" TextWrapping="Wrap" Text="Image From Location" Canvas.Top="10"/>
-            <TextBox Name="ImageFrom" Height="16" Canvas.Left="148" TextWrapping="Wrap" Text="C:\" Canvas.Top="9" Width="222" />
-            <Button Canvas.Top="31" Width="16" Canvas.Left="88" Height="16" Click="FindSaveTo">
-                <Button.Background>
-                    <ImageBrush ImageSource="file-explorer-folder-libraries-icon-18298.png"/>
-                </Button.Background>
-                <Image Source="file-explorer-folder-libraries-icon-18298.png"/>
-            </Button>
-            <TextBlock Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="31" Height="16"><Run Text="Save Location"/><LineBreak/><Run/></TextBlock>
-            <TextBox Name="ImageTo"  Height="16" Canvas.Left="109" TextWrapping="Wrap" Text="C:\" Canvas.Top="31" Width="261" />
-            <Button Content="Save Image" Canvas.Left="319" Canvas.Top="261" Width="75" Click="Capture_Start_Click"/>
-            <Image Height="144" Width="150" Canvas.Left="124" Canvas.Top="82" Source="/save-1779882-1518534.png"/>
-        </Canvas>
-        <Canvas Name="Apply_Image_Canvas" HorizontalAlignment="Left" Height="290" Margin="10,55,0,0" VerticalAlignment="Top" Width="404" Visibility="Hidden">
-            <Button Canvas.Top="10" Width="16" Canvas.Left="118" Height="16" Click="FindImage">
-                <Button.Content>
-                    <Image Source="file-explorer-folder-libraries-icon-18298.png" IsEnabled="False"/>
-                </Button.Content>
-                <Button.Background>
-                    <ImageBrush ImageSource="file-explorer-folder-libraries-icon-18298.png"/>
-                </Button.Background>
-            </Button>
-            <TextBlock Canvas.Left="10" TextWrapping="Wrap" Text="Image File Location" Canvas.Top="10"/>
-            <TextBox Name="ImageFileFrom" Height="16" Canvas.Left="139" TextWrapping="Wrap" Text="P:\" Canvas.Top="9" Width="231"/>
-            <Button Canvas.Top="31" Width="16" Canvas.Left="97" Height="16" Click="FindImageTo">
-                <Button.Background>
-                    <ImageBrush ImageSource="file-explorer-folder-libraries-icon-18298.png"/>
-                </Button.Background>
-                <Image Source="file-explorer-folder-libraries-icon-18298.png"/>
-            </Button>
-            <TextBlock Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="31" Height="16"><Run Text="Apply Image To"/><LineBreak/><Run/></TextBlock>
-            <TextBox Name="ApplyImageTo"  Height="16" Canvas.Left="118" TextWrapping="Wrap" Text="C:\" Canvas.Top="31" Width="252"/>
-            <Button Content="Apply Image" Canvas.Left="319" Canvas.Top="261" Width="75" Click="Start_Apply_Image_Click"/>
-            <Image Height="144" Width="150" Canvas.Left="124" Canvas.Top="82" Source="/mono-resfileopen.png"/>
-        </Canvas>
-        <Canvas  Name="Completion_Canvas" HorizontalAlignment="Left" Height="290" Margin="10,55,0,0" VerticalAlignment="Top" Width="404" Visibility="Hidden">
-            <Image gif:ImageBehavior.AnimatedSource="\giphy.gif" Width="224" Height="224" Canvas.Top="52" />
-            <Label Content="Process Complete!" Canvas.Top="-14" FontSize="50"/>
-            <Image gif:ImageBehavior.AnimatedSource="/giphy.gif" Width="224" Height="224" Canvas.Left="180" Canvas.Top="52" RenderTransformOrigin="0.5,0.5" >
-                <Image.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform ScaleX="-1"/>
-                        <SkewTransform/>
-                        <RotateTransform/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </Image.RenderTransform>
-            </Image>
-        </Canvas>
-        <Button Content="Create Image" HorizontalAlignment="Left" Margin="110,10,0,0" VerticalAlignment="Top" Width="95" Click="CreateImage"/>
-        <Button Content="Apply Image" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="95" Click="ApplyImage"/>
+	<Grid Margin="0,0,0,0">
+		<TextBlock x:Name="CanvasLabel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Create Image" VerticalAlignment="Top" Canvas.Left="164" Canvas.Top="-19" Margin="10,39,0,0" Width="404" TextAlignment="Center" Visibility="Visible"/>
+		<Canvas Name="Create_Image_Canvas" HorizontalAlignment="Left" Height="290" Margin="10,55,0,0" VerticalAlignment="Top" Width="404" Visibility="Visible">
+			<Button Canvas.Top="10" Width="16" Canvas.Left="127" Height="16" Click="FindImageFrom">
+				<Button.Content>
+					<Image Source="file-explorer-folder-libraries-icon-18298.png" IsEnabled="False"/>
+				</Button.Content>
+				<Button.Background>
+					<ImageBrush ImageSource="file-explorer-folder-libraries-icon-18298.png"/>
+				</Button.Background>
+			</Button>
+			<TextBlock Canvas.Left="10" TextWrapping="Wrap" Text="Image From Location" Canvas.Top="10"/>
+			<TextBox Name="ImageFrom" Height="16" Canvas.Left="148" TextWrapping="Wrap" Text="C:\" Canvas.Top="9" Width="222" />
+			<Button Canvas.Top="31" Width="16" Canvas.Left="88" Height="16" Click="FindSaveTo">
+				<Button.Background>
+					<ImageBrush ImageSource="file-explorer-folder-libraries-icon-18298.png"/>
+				</Button.Background>
+				<Image Source="file-explorer-folder-libraries-icon-18298.png"/>
+			</Button>
+			<TextBlock Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="31" Height="16"><Run Text="Save Location"/><LineBreak/><Run/></TextBlock>
+			<TextBox Name="ImageTo"  Height="16" Canvas.Left="109" TextWrapping="Wrap" Text="C:\" Canvas.Top="31" Width="261" />
+			<Button Content="Save Image" Canvas.Left="319" Canvas.Top="261" Width="75" Click="Capture_Start_Click"/>
+			<Image Height="144" Width="150" Canvas.Left="124" Canvas.Top="82" Source="/save-1779882-1518534.png"/>
+		</Canvas>
+		<Canvas Name="Apply_Image_Canvas" HorizontalAlignment="Left" Height="290" Margin="10,55,0,0" VerticalAlignment="Top" Width="404" Visibility="Hidden">
+			<Button Canvas.Top="10" Width="16" Canvas.Left="118" Height="16" Click="FindImage">
+				<Button.Content>
+					<Image Source="file-explorer-folder-libraries-icon-18298.png" IsEnabled="False"/>
+				</Button.Content>
+				<Button.Background>
+					<ImageBrush ImageSource="file-explorer-folder-libraries-icon-18298.png"/>
+				</Button.Background>
+			</Button>
+			<TextBlock Canvas.Left="10" TextWrapping="Wrap" Text="Image File Location" Canvas.Top="10"/>
+			<TextBox Name="ImageFileFrom" Height="16" Canvas.Left="139" TextWrapping="Wrap" Text="P:\" Canvas.Top="9" Width="231"/>
+			<Button Canvas.Top="31" Width="16" Canvas.Left="97" Height="16" Click="FindImageTo">
+				<Button.Background>
+					<ImageBrush ImageSource="file-explorer-folder-libraries-icon-18298.png"/>
+				</Button.Background>
+				<Image Source="file-explorer-folder-libraries-icon-18298.png"/>
+			</Button>
+			<TextBlock Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="31" Height="16"><Run Text="Apply Image To"/><LineBreak/><Run/></TextBlock>
+			<TextBox Name="ApplyImageTo"  Height="16" Canvas.Left="118" TextWrapping="Wrap" Text="C:\" Canvas.Top="31" Width="252"/>
+			<Button Content="Apply Image" Canvas.Left="319" Canvas.Top="261" Width="75" Click="Start_Apply_Image_Click"/>
+			<Image Height="144" Width="150" Canvas.Left="124" Canvas.Top="82" Source="/mono-resfileopen.png"/>
+		</Canvas>
+		<Canvas  Name="Completion_Canvas" HorizontalAlignment="Left" Height="290" Margin="10,55,0,0" VerticalAlignment="Top" Width="404" Visibility="Hidden">
+			<Image gif:ImageBehavior.AnimatedSource="\giphy.gif" Width="224" Height="224" Canvas.Top="52" />
+			<Label Content="Process Complete!" Canvas.Top="-14" FontSize="50"/>
+			<Image gif:ImageBehavior.AnimatedSource="/giphy.gif" Width="224" Height="224" Canvas.Left="180" Canvas.Top="52" RenderTransformOrigin="0.5,0.5" >
+				<Image.RenderTransform>
+					<TransformGroup>
+						<ScaleTransform ScaleX="-1"/>
+						<SkewTransform/>
+						<RotateTransform/>
+						<TranslateTransform/>
+					</TransformGroup>
+				</Image.RenderTransform>
+			</Image>
+		</Canvas>
+		<Button Content="Create Image" HorizontalAlignment="Left" Margin="110,10,0,0" VerticalAlignment="Top" Width="95" Click="CreateImage"/>
+		<Button Content="Apply Image" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="95" Click="ApplyImage"/>
+		<Button Content="?" HorizontalAlignment="Left" Margin="408,347,0,0" VerticalAlignment="Top" Width="12" Height="12" Padding="-5,-25" Click="CheckVersion"/>
 
 
-    </Grid>
+	</Grid>
 </Window>
